--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ footer{
       <div class="flip-card" onclick="flipCard(this)">
         <div class="flip-inner">
           <div class="flip-front">Memory 3</div>
-          <div class="flip-back">Our endless laughs 😄</div>
+          <div class="flip-back">Our sleeps</div>
         </div>
       </div>
     </div>
@@ -351,15 +351,57 @@ footer{
 
     <p class="love-paragraph">
       Every single moment with you is precious to me.
-      From our long-distance calls to the smallest surprises,
-      from the gifts you gave me to the silly fights we had —
-      everything about us is unforgettable.
-      You are my peace, my happiness, my forever.
+      Moment we met first:
+        The day we first met in front of pothys where you wear 
+         a white top and black legin, you sight me from a footwear 
+         shop where im lookin mad for you where you are by hanging 
+         in phone. finally we met and walk on the busy street where 
+         you stare many time on me with suprises. I left the place 
+         where you and me turning back to check whether we seeing each other.
+      The Day you proposed me:
+        On my birthday, my friends poratifying me with the birthday bumps, 
+         you called me for very often with repated calls, when im back and
+         called you and you intentinally went to sister home to talk with me. 
+         Haan back to point, in the call at around 12:15-1 am you wished me with
+         a warm, kovamana happy birthday. 
+       And on same day at 6:42 am you called and suprised me with your propsal,
+        I was shocked and way in hurry and asked you to repeat, and you said that 
+        with that much of love.
+      When I met you in gate at your office:
+        You actually saw me and keep going towards to busstop as a usual 
+         thing you felt everyday on seeing someone with lite shades of mine. But 
+         on that day in the phoen call i said that is me and saw you face that you 
+         and asked "en enga vantha, na poran, nee kelambu, en vantha..." repeated. 
+         Next we stand on side of the road, i asked to get in the bike but you refused,
+         and your office mates saw us and simled at you than i reached the bustop in 
+         wrong station and you left by bus by saying bye in by stay inside bus. 
+      Your birthday: 
+        You asked me to with you on your birthday, I came only because of love which
+         you gave to me is none to be expressed. we enjoyed a lot and on VOC only the
+         sake of im asking you came for the gaint wheel ride with lot of fear, i still
+         have the videos. Thanks for the love d "venna movalae"
+      The ring day: 
+        Finally with lot of love and fight, finally on april 17  i came and gave you
+         ring. but you runed a lot of possiblity on your mind before having the ring.
+         And you asked "etha nee unmaiyatha kudukuriya, seri potu vide elana vendam".
+         I put in you finger and you asked "epadi size lam therium unakunu".
+      Fights:
+        Yes we "adichu urundu irukom most of the times..". What ever happens 
+        we fight a lot. Thanks for the fight, with those fight i know how much 
+        you love me. evry fight you came to me first at whatever cost. "una na ennatha
+        adichalum, nee vanthuruva". I felt, eva thaan da unaketha venna mova nu, i loved a lot.
+      
+      From our long-distance calls to the smallest surprises, from the gifts 
+      you gave me to the silly fights we had, everything about us is unforgettable.
+      You are my mental, paithiyam, lusu, my happiness, my best and safe place
+      where i share anything.
+
+      Neariya unoda moments iruku... But athulam enga sola mudiyathu, unakum herium y nu!
     </p>
   </div>
 
   <div class="names">
-    Bava 💙 Kutty Kunji
+    Jayakrishnan 💙 Aishwarya
   </div>
 
   <footer>
@@ -424,7 +466,7 @@ const button=document.getElementById("enterBtn");
 
 input.addEventListener("input",function(){
   let value=input.value.toLowerCase().replace(/\s+/g,'').trim();
-  if(value==="bava" || value==="kuttykunji"){
+  if(value==="bava" || value==="kuttykunji" || value==="eruma"){
     button.disabled=false;
   }else{
     button.disabled=true;
@@ -448,3 +490,4 @@ function flipCard(card){
 </body>
 
 </html>
+
